# sparql_noir

./: .gitattributes  .gitignore  .npmignore  .pre-commit-config.yaml  .releaserc.json  .sync-manifest.json  .yamllint.yml  API_IMPLEMENTATION.md  ARCHITECTURE.md  BABYJUBJUB_HANDOVER.md  BENCHMARK.md  Conversation.md  DELETION_CANDIDATES.md  Dockerfile  GOAL.md  IEEE754_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  NOTES.md  README.md  SEMANTIC_RELEASE_GUIDE.md  SPARQL_COVERAGE.md  SPARQL_ROADMAP.md  STEPS.md  XPATH_INTEGRATION_SUMMARY.md  analyze-bn.mjs  analyze-functions.mjs  check-tests.mjs  config.ts  eddsa.cjs  jub.js  mappings.json  package-lock.json  package.json  setup.js  test-wasm-compile.mjs  ts.js  tsconfig.json
src/: eddsa.ts  (+8 more)
transform/: Cargo.toml
transform/src/: config.ts  emit.rs  encode.ts  encoding.rs  equivalentOperators.ts  eval.rs  expr.rs  expressionSimplifier.ts  generateFunctional copy.ts  generateFunctional.ts  inputs.rs  ir.rs  lib.rs  lower.rs  main.rs  main.rs.bak  merkle.rs  metadata.rs  parse.rs  prover.rs  termId.ts  transform.ts  types.ts  xsd.ts
transform/src/operators/: types.ts
transform/template/: main-simple.template.nr  main-verify.template.nr
transform/tests/: snapshot.rs
transform/tests/snapshots/: ask_query.metadata.json  ask_query.sparql.nr  avg.metadata.json  avg.sparql.nr  basic_bgp.metadata.json  basic_bgp.sparql.nr  bind_basic.metadata.json  bind_basic.sparql.nr  blank_node.metadata.json  blank_node.sparql.nr  count.metadata.json  count.sparql.nr  count_distinct.metadata.json  count_star.main.nr  count_star.metadata.json  (+105 more)
(+209 files in other folders)
